Changing all urls in template to a more generic

--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -6,7 +6,8 @@ edit {{title}}
 
 {% block body %}
 <div>
-    <form action="/wiki/{{title}}/edit" method="POST">
+    <form action="{% url 'enc:edit' title %}" method="POST">
+        
         {% csrf_token %}
         {{text}}
         <input type="submit">
